# Table-and-Graph-Libs

./: .travis.yml  CITATION.cff  CMakeLists.txt  README.md  graphs.cpp  graphs.hpp  tables.cpp  tables.hpp
.github/workflows/: ci.yml
python/: README.md  __main__.py  graphs.py  pyproject.toml  tables.py  test.py
